change collapse bars color fixed admin panel ui

--- a/css/admin/admin.css
+++ b/css/admin/admin.css
@@ -97,6 +97,7 @@
 .collapse_section_header {
   width: 100%;
   padding: 4px;
+  background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 1px 5px 0px #cbcbcb;
   cursor: pointer;
@@ -125,6 +126,7 @@
   min-height: 100px;
   max-height: fit-content;
   padding: 8px;
+  background-color: #ffffff;
   opacity: 1;
   animation: heightReducer 2s;
   border-radius: 0 0 10px 10px;
