--- a/css/form.css
+++ b/css/form.css
@@ -14,11 +14,10 @@ select {
 input,
 textarea,
 select {
-  margin-top: 8px;
-  background-color: #edecff;
-  padding: 12px !important;
-  font-size: 16px !important;
-  border: 2px solid #ebf0ff !important;
+  border: 1px solid #e2e2e2;
+  padding: 8px;
+  font-size: 14px;
+  border-radius: 8px;
 }
 
 input:focus-visible {
